--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -10,7 +10,7 @@
     tools:context="com.jp.schleifer.schleifer.MainActivity$PlaceholderFragment">
 
     <TextView
-        android:text="@string/hello2"
+        android:text="@string/testi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
